[gd_scene load_steps=17 format=3 uid="uid://bnhjc44wh5uu2"]

[ext_resource type="Texture2D" uid="uid://cc3uaixye35pw" path="res://assets/art/bigger splash screen.png" id="1_2hy3d"]
[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_wqmbu"]
[ext_resource type="FontFile" uid="uid://cafm4cwqe6jg6" path="res://assets/fonts/Megufont Regular.ttf" id="2_eg32d"]

[sub_resource type="LabelSettings" id="LabelSettings_vfokg"]
font = ExtResource("2_eg32d")
font_size = 92
outline_size = 24
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_gd8id"]
font = ExtResource("2_eg32d")
font_size = 36
outline_size = 24
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_cmvit"]
font = ExtResource("2_eg32d")
font_size = 30
outline_size = 24
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_01pqp"]
font = ExtResource("2_eg32d")
font_size = 48
outline_size = 24
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_i7b7l"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p53lv"]
bg_color = Color(0.627635, 0.627635, 0.627635, 1)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dkc1e"]
bg_color = Color(0.18359, 0.18359, 0.18359, 1)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pqqku"]
bg_color = Color(0.0627451, 0.0627451, 0.0627451, 1)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_atuw3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gkcr7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4gv27"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2tmqr"]
bg_color = Color(0.777323, 0.0515812, 3.47268e-07, 1)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s1k3s"]
bg_color = Color(0.945506, 0.298079, 0.277298, 1)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32

[node name="main_menu" type="Node2D"]
script = ExtResource("1_wqmbu")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_2hy3d")
expand_mode = 2

[node name="Title" type="Label" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 64.0
offset_top = 56.0
offset_right = 739.0
offset_bottom = 125.0
text = "Beachside Tactics"
label_settings = SubResource("LabelSettings_vfokg")

[node name="Made by" type="Label" parent="CanvasLayer/Control"]
auto_translate_mode = 1
layout_mode = 0
offset_left = 64.0
offset_top = 136.0
offset_right = 239.0
offset_bottom = 159.0
text = "made by Juan Pichardo"
label_settings = SubResource("LabelSettings_gd8id")

[node name="Art by" type="Label" parent="CanvasLayer/Control"]
auto_translate_mode = 1
layout_mode = 0
offset_left = 64.0
offset_top = 176.0
offset_right = 400.0
offset_bottom = 204.0
text = "icon/splash art by @verocitystories"
label_settings = SubResource("LabelSettings_cmvit")

[node name="Version" type="Label" parent="CanvasLayer/Control"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -385.0
offset_top = -69.0
offset_right = -32.0
offset_bottom = -32.0
grow_horizontal = 0
grow_vertical = 0
text = "v1.0.7"
label_settings = SubResource("LabelSettings_01pqp")
horizontal_alignment = 2

[node name="Play" type="Button" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 64.0
offset_top = -288.0
offset_right = 464.0
offset_bottom = -168.0
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_eg32d")
theme_override_font_sizes/font_size = 72
theme_override_styles/focus = SubResource("StyleBoxEmpty_i7b7l")
theme_override_styles/hover = SubResource("StyleBoxFlat_p53lv")
theme_override_styles/pressed = SubResource("StyleBoxFlat_dkc1e")
theme_override_styles/normal = SubResource("StyleBoxFlat_pqqku")
text = "Play"

[node name="How To Play" type="Button" parent="CanvasLayer/Control"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 64.0
offset_top = -144.0
offset_right = 464.0
offset_bottom = -72.0
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_eg32d")
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxEmpty_atuw3")
theme_override_styles/hover = SubResource("StyleBoxFlat_p53lv")
theme_override_styles/pressed = SubResource("StyleBoxFlat_dkc1e")
theme_override_styles/normal = SubResource("StyleBoxFlat_pqqku")
text = "How To Play"

[node name="Settings" type="Button" parent="CanvasLayer/Control"]
auto_translate_mode = 1
visible = false
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 64.0
offset_top = -224.0
offset_right = 360.0
offset_bottom = -152.0
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_eg32d")
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxEmpty_gkcr7")
theme_override_styles/hover = SubResource("StyleBoxFlat_p53lv")
theme_override_styles/pressed = SubResource("StyleBoxFlat_dkc1e")
theme_override_styles/normal = SubResource("StyleBoxFlat_pqqku")
text = "Settings
"

[node name="Quit" type="Button" parent="CanvasLayer/Control"]
auto_translate_mode = 1
visible = false
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 64.0
offset_top = -144.0
offset_right = 464.0
offset_bottom = -72.0
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_eg32d")
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxEmpty_4gv27")
theme_override_styles/hover = SubResource("StyleBoxFlat_2tmqr")
theme_override_styles/pressed = SubResource("StyleBoxFlat_s1k3s")
theme_override_styles/normal = SubResource("StyleBoxFlat_pqqku")
text = "Quit"

[connection signal="pressed" from="CanvasLayer/Control/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/How To Play" to="." method="_on_how_to_play_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Quit" to="." method="_on_quit_pressed"]
